--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,6 +38,6 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         # Artifact name
-        name:  screenshots
+        name: screenshots-${{ matrix.python-version }}-${{ github.run_id }}
         # A file, directory or wildcard pattern that describes what to upload
         path: /home/runner/work/_temp/*p*
